--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,14 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./website
+        working-directory: ./platform2/website
 
       - name: Build Docusaurus website
         run: npm run build
-        working-directory: ./website
+        working-directory: ./platform2/website
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./website/build
+          publish_dir: ./platform2/website/build
